--- a/ClasesAbstractas-Interfaces/pom.xml
+++ b/ClasesAbstractas-Interfaces/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>clases.ClasesAbstractasInterfaces</exec.mainClass>
+        <exec.mainClass>principal.ClasesAbstractasInterfaces</exec.mainClass>
     </properties>
 </project>
