--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 *.class
 target*
+/PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/nbproject/private/
+/PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/build/
+/PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/dist/
