Se incorporan soluciones a Evaluacion Parcial2

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ target*
 /PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/nbproject/private/
 /PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/build/
 /PGY2121_2023/Evaluacion1/Parcial1_26082023/Solucion1/dist/
+/PGY2121_2023/Evaluacion2/AirbnbPet/build/
+/PGY2121_2023/Evaluacion2/AirbnbPet/nbproject/private/
+/PGY2121_2023/Evaluacion2/Solucion2/build/
+/PGY2121_2023/Evaluacion2/Solucion2/nbproject/private/
