--- a/DB/DBAlumno/pom.xml
+++ b/DB/DBAlumno/pom.xml
@@ -10,5 +10,12 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>principal.DBAlumno</exec.mainClass>
-    </properties>
+    </properties>    
+    <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.17</version>
+    </dependency>
+  </dependencies>
 </project>
