--- a/DB/DBAlumno/pom.xml
+++ b/DB/DBAlumno/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <exec.mainClass>principal.DBAlumno</exec.mainClass>
+        <exec.mainClass>principal.Principal</exec.mainClass>
     </properties>    
     <dependencies>
     <dependency>
